removing sign up from home, add if want to make kick

--- a/app/assets/stylesheets/_user-show.css.scss
+++ b/app/assets/stylesheets/_user-show.css.scss
@@ -13,7 +13,7 @@
       //height: 100%;
       position: absolute;
       left: 0;
-      // border:10px solid #eee;
+      border: 2px solid white;
       transition: all 0.7s ease-in-out;
       // padding: 10px;
       margin-right: 55px;
