--- a/app/assets/stylesheets/_home-index.css.scss
+++ b/app/assets/stylesheets/_home-index.css.scss
@@ -10,23 +10,23 @@
     color: white;
     padding: 20px;
 
-    .imageContainer {
-      width: 114px;
-      padding-bottom: 100%;
-      position: relative;
-      overflow: hidden;
-      border-radius: 50%;
-      margin-bottom: 19px;
-
-      IMG {
-        height: 110px;
-        width: 110px;
-        border-radius: 55px;
-        border: 2px solid white;
-        position: absolute;
-        left: 0;
-      }
-    }
+    //.imageContainer {
+    //  width: 114px;
+    //  padding-bottom: 100%;
+    //  position: relative;
+    //  overflow: hidden;
+    //  border-radius: 50%;
+    //  margin-bottom: 19px;
+    //
+    //  IMG {
+    //    height: 110px;
+    //    width: 110px;
+    //    border-radius: 55px;
+    //    border: 2px solid white;
+    //    position: absolute;
+    //    left: 0;
+    //  }
+    //}
 
     .profile-img{
       width: 100%;
@@ -95,7 +95,7 @@
         margin-left: 68px;
       }
 
-      .imageContainer {
+      .imageContainer-index {
         width: 15%;
         height: 0;
         padding-bottom: 15%;
