--- a/app/assets/stylesheets/_mapbox-leaflet.css.scss
+++ b/app/assets/stylesheets/_mapbox-leaflet.css.scss
@@ -1,3 +1,25 @@
+#map-overlay {
+  position:absolute;
+  top:0px; bottom:0px; width:100%;
+  background:rgba(64,64,64,0.4);
+  z-index:-1;
+  opacity:0;
+  -webkit-transition:opacity 200ms ease-in 100ms, z-index 200ms ease-in 100ms;
+}
+#map-overlay:before {
+  content:'';
+  width:40px;
+  height:40px;
+  position:absolute; left:50%; top:50%;
+  margin:-20px 0px 0px -20px;
+  border-radius:50%;
+  box-shadow:rgba(0,0,0,0.1) 0px 0px 0px 10px;
+  background:#444 url(spinner.gif) 50% 50% no-repeat;
+}
+.loading #map-overlay {
+  z-index:1000;
+  opacity:1;
+}
 
 #mapbox {
   height: 680px;
